plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.0'
    id "io.freefair.lombok" version "6.4.1"
}

group 'io.github.aquerr'
version '1.0-SNAPSHOT'

sourceCompatibility = 17
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
    maven {
        url 'https://m2.dv8tion.net/releases'
    }
}

dependencies {
    implementation 'com.sedmelluq:lavaplayer:1.3.78'
    implementation ('net.dv8tion:JDA:4.4.0_350') {
        exclude module: 'opus-java'
    }
    implementation 'com.vdurmont:emoji-java:5.1.1'

    // https://mvnrepository.com/artifact/org.json/json
    implementation 'org.json:json:20210307'
    implementation 'com.typesafe:config:1.4.1'

    // Logging (Log4j2)
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'

    // Test (JUnit 5)
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testImplementation 'org.mockito:mockito-core:4.3.1'
    testImplementation 'org.assertj:assertj-core:3.22.0'
}

jar {
    manifest {
        attributes 'Main-Class': 'io.github.aquerr.futrzakbot.FutrzakBot'
    }
}

shadowJar {
//    archiveBaseName.set('shadow')
    archiveClassifier.set('')
//    archiveVersion.set('')
}

test {
    useJUnitPlatform()
}